# sqep-lite

./: Cargo.toml  LICENSE  LICENSE-NOTICE.md  README.md
.github/workflows/: ci.yml
src/: cipher.rs  lib.rs  lite.rs
