[package]
name = "sqep-lite"
version = "0.4.0"
edition = "2021"

authors = ["Herbert Manfred Fulgence Vaty — ElevitaX <elevitax@gmail.com>"]

description = "SQEP Lite — ZeroshieldCipher: a minimal, auditable HKDF + ChaCha20-Poly1305 encryption construction (MIT licensed)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ElevitaX/sqep-lite"
keywords = ["cryptography", "aead", "hkdf", "chacha20", "security"]
categories = ["cryptography"]

# No need for exclude — Plus files are removed entirely in the lite repo.

[features]
default = []  # Lite-only has no feature flags

[dependencies]
# Core cryptography
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
base64 = "0.21"
ring = "0.17"
hex = "0.4"

# Used internally for IDs or metadata if the Lite code uses it.
nanoid = "0.4"

# Serialization (optional but safe for Lite)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "sqep_lite"
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }

